--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "acacha/admin-lte-template-laravel": "^6.0",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "caouecs/laravel-lang": "~3.0",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
